--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             color: black;
             text-align: center;
         }
+
         header {
             position: fixed;
             top: 0;
@@ -26,30 +27,30 @@
             background-color: rgba(255, 255, 255, 0.8);
             z-index: 10;
         }
+
         .logo {
             font-size: 15px;
             font-weight: bold;
             width: 50px;
             height: 50px;
         }
+
         nav {
             display: flex;
             gap: 20px;
         }
+
         nav a {
             color: black;
             text-decoration: none;
             font-size: 20px;
-            .logo-text {
-            font-size: 24px;
-            font-weight: bold;
         }
         .nav-logo {
         height: 20px; /* oder was dir gefällt */
         margin-left: 10px;
         margin-right: 10px;
         }
-        }
+
         .video-container {
             position: relative;
             width: 100%;
@@ -57,6 +58,7 @@
             overflow: hidden;
             margin-bottom: -10px;
         }
+
         .video-container video {
             position: absolute;
             top: 0;
@@ -65,6 +67,7 @@
             height: 100%;
             object-fit: cover;
         }
+
         .content {
             padding: 10px;
             margin-top: 0px;
@@ -74,6 +77,7 @@
             margin-right: auto;
             text-align: center;
         }
+
         .button {
             display: inline-block;
             padding: 10px 20px;
@@ -84,50 +88,73 @@
             border-radius: 5px;
             margin-top: 20px;
         }
+
         .infobox {
             margin-top: 20px;
             background-color: #f0f0f0;
             padding: 10px;
             border-radius: 5px;
         }
-        .gallery {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
+
+        footer {
+            background-color: #ddd;
+            padding: 20px;
+            font-size: 18px;
+            color: #333;
+            text-align: center;
             margin-top: 40px;
+            position: relative;
+            min-height: 200px;
+            background-image: url('surf2fly_logo.svg');
+            background-repeat: no-repeat;
+            background-position: right bottom;
+            background-size: 150px;
         }
-        .gallery img {
-            width: 30%;
-            margin: 10px 0;
+
+        .kontakt-extra {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .footer-logo {
+            height: 150px;
+            margin-bottom: 0;
+        }
+
+        .whatsapp-btn {
+            display: block;
+            height: 70px;
+            max-width: 70vw;
+            margin-top: 10px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .cookie-banner {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            background-color: rgba(0,0,0,0.85);
+            color: white;
+            padding: 15px;
+            text-align: center;
+            z-index: 999;
+        }
+
+        .cookie-banner button {
+            background-color: #698B22;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            margin-left: 10px;
+            cursor: pointer;
             border-radius: 5px;
         }
-footer {
-    background-color: #ddd;
-    padding: 20px;
-    font-size: 18px;
-    color: #333;
-    text-align: center;
-    margin-top: 40px;
-}
-        .kontakt-extra {
-    text-align: center;
-    margin-top: 20px;
-}
 
-.footer-logo {
-    height: 150px;
-    margin-bottom: 0;
-}
-
-.whatsapp-btn {
-    display: block;
-    height: 70px;
-    max-width: 70vw;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-
-}
+        .cookie-banner a {
+            color: #fff;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -135,7 +162,7 @@ footer {
         <div class="logo"><source src="surf2fly_logofail.png" type="picture/jpg">SURF2FLY</div>
         <nav>
             <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2DBcMRGSvisQBdkVOJO9svyFcIYb3VCnk3KRLtj2ynTePi7Fe61Atk5mJ3jlSQcwV0kEZYP0Uz?gv=true">Termin</a>
-            <a href="#kontakt">Kontakt   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp  </a>
+            <a href="#kontakt">Kontakt</a>
         </nav>
     </header>
 
@@ -145,10 +172,11 @@ footer {
             Dein Browser unterstützt kein HTML5-Video.
         </video>
     </div>
+
     <div class="content">
         <div style="display: flex; align-items: center; justify-content: center; gap: 15px; flex-wrap: wrap;">
             <h1 style="margin: 0;">Willkommen bei SURF2FLY</h1>
-    </div>    
+        </div>    
         <p>Franken meets eSurfing</p>
         <p>Als regionales Start-Up aus dem unterfränkischen Schweinfurt bieten wir dir, deinen Freunden und/oder deiner Familie das ultimative Wasser- und Surferlebnis auf dem Main. Unsere professionellen Coaches zeigen dir, wie du schon nach wenigen Minuten eigenständig auf dem eFoil stehst und mittels elektronischer Antriebssteuerung über die Wellen gleitest. Also, worauf wartest du – lets eSurf!</p>
         
@@ -191,36 +219,54 @@ footer {
         <p>- Gute Laune :)</p>
         <p>Natürlich sind ein Neoprenanzug, Schuhe, Helm und eine Weste im Preis mit dabei. Teilnahme erst ab 18 Jahren.</p>
     </div>
-<!-- Im Footer am Ende deiner Datei -->
-<footer id="kontakt">
-    <!-- Logo mittig -->
-    <img src="surf2fly_logo.svg" alt="Surf2Fly Logo" class="footer-logo" />
 
-   <h3 style="margin-top: 0;">Impressum</h3>
+    <footer id="kontakt">
+        <h3 style="margin-top: 0;">Impressum</h3>
+        <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+            <p><strong>Angaben gemäß § 5 TMG:</strong><br>
+            Surf2fly GbR<br>
+            Konrad-Wagner-Str. 7<br>
+            97526 Sennfeld</p>
 
-    <div style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-        <p><strong>Angaben gemäß § 5 TMG:</strong><br>
-        Surf2fly GbR<br>
-        Konrad-Wagner-Str. 7<br>
-        97526 Sennfeld</p>
+            <p style="font-size: 20px;"><strong>Kontakt:</strong><br>
+            Telefon: 015679 617921<br>
+            WhatsApp: 015679 617921<br>
+            E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
+        </div>
 
-        <p style="font-size: 20px;"><strong>Kontakt:</strong><br>
-        Telefon: 015679 617921<br>
-        WhatsApp: 015679 617921<br>
-        E-Mail: <a href="mailto:surf2fly@mail.de">surf2fly@mail.de</a></p>
+        <div class="kontakt-extra"> 
+            <a aria-label="Chat on WhatsApp"
+                href="https://api.whatsapp.com/send/?phone=4915679617921&text&type=phone_number&app_absent=0"
+                target="_blank">
+                <img alt="Chat on WhatsApp"
+                    src="WhatsAppButtonGreenLarge.svg"
+                    class="whatsapp-btn" />
+            </a>
+        </div>
+
+        <div style="margin-top: 30px;">
+            <a href="Datenschutz.html" style="color: #333; text-decoration: underline;">Datenschutzerklärung</a>
+        </div>
+    </footer>
+
+    <div id="cookie-banner" class="cookie-banner" style="display: none;">
+        Diese Website verwendet Cookies, um dir das beste Erlebnis zu bieten. 
+        <a href="Datenschutz.html" target="_blank">Mehr erfahren</a>
+        <button onclick="acceptCookies()">OK</button>
     </div>
 
-    <!-- WhatsApp Button darunter, zentriert -->
-    <div class="kontakt-extra"> 
-        <a aria-label="Chat on WhatsApp"
-            href="https://api.whatsapp.com/send/?phone=4915679617921&text&type=phone_number&app_absent=0"
-            target="_blank">
-            <img alt="Chat on WhatsApp"
-                src="WhatsAppButtonGreenLarge.svg"
-                class="whatsapp-btn" />
-        </a>
-    </div>
-</footer>
+    <script>
+        function acceptCookies() {
+            localStorage.setItem('cookiesAccepted', 'true');
+            document.getElementById('cookie-banner').style.display = 'none';
+        }
+
+        window.onload = function() {
+            if (!localStorage.getItem('cookiesAccepted')) {
+                document.getElementById('cookie-banner').style.display = 'block';
+            }
+        };
+    </script>
 
 </body>
 </html>
